Fix header bug on mobile
To ne tested as it looks like on safari it’s still doing something odd.. when the page is loading the headers and the logo are no places properly at the top fo the page but after few second goig back to normal.. The page need to be in mobile size.

--- a/css/RGstyles.css
+++ b/css/RGstyles.css
@@ -325,11 +325,16 @@ body.contact nav a[href="contact.html"] {
   min-width: 100%;
   width: 100%;
   padding-bottom: 100px;
+  margin: 0; }
+
+.header-wrapper {
+  position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0; }
+  width: 100%;
+  height: 100%; }
 
 .branding {
   flex-direction: column;
@@ -338,10 +343,10 @@ body.contact nav a[href="contact.html"] {
   text-align: center;
   display: flex;
   min-width: 100%;
-  min-height: 100%;
-  margin: 0;
+  margin: 0 auto;
   color: white;
-  font-family: "futura-pt", sans-serif; }
+  font-family: "futura-pt", sans-serif;
+  position: relative; }
   @media only screen and (min-width: 37.5rem) {
     .branding {
       flex-direction: row;
@@ -401,7 +406,7 @@ body.contact nav a[href="contact.html"] {
   align-items: center;
   padding: 10px 0;
   min-width: 100%;
-  margin-top: 25px; }
+  position: relative; }
   .index-footer .headButton {
     height: auto;
     margin: 15px;
