--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -6,12 +6,19 @@
   	min-width: 100%;
     width:100%;
   	padding-bottom:100px;
-  	display: flex;
-    flex-direction: column;
-  	justify-content: center;
-  	align-items: center;
   	margin: 0;
 
+}
+
+.header-wrapper {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  
 }
 
 
@@ -22,10 +29,12 @@
   text-align: center;
   display: flex;
   min-width: 100%;
-  min-height:100%;
-  margin:0;
+  margin:0 auto;
   color:white;
   font-family: $secondary_font;
+  position: relative;
+
+
 
 
   @include MQ (XS){
@@ -110,7 +119,8 @@
   align-items: center;
   padding:10px 0;
   min-width: 100%;
-  margin-top: 25px;
+
+  position: relative;
 
 
 
